# flowst

./: .gitignore  Cargo.toml  README.md  changelog.md
src/: config.rs  lib.rs  main.rs  notif.rs  timer.rs  ui.rs
