[package]
name = "flowst"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.3.5", features = ["derive"]}
tokio = { version = "1", features = ["full"] }
confy = "0.3"
serde = {version = "1.0.166", features = ["derive"]}
tui = "0.19.0"
crossterm = "0.26.1"

[[bin]]
path = "src/main.rs"
name = "flowst"
