[package]
name = "flowst"
version = "0.1.1"
edition = "2021"
description = "A simple pomodoro CLAP and TUI built in Rust."
license = "BSD-3-Clause"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.3.5", features = ["derive"]}
tokio = { version = "1", features = ["full"] }
confy = "0.5"
serde = {version = "1.0.166", features = ["derive"]}
tui = "0.19.0"
crossterm = "0.26.1"
serde_with = {version = "3.1.0", features = ["chrono_0_4"]}
chrono = {version = "0.4.26", features = ["serde"]}
time = "0.2.23"

[[bin]]
path = "src/main.rs"
name = "flowst"
